[gd_scene load_steps=9 format=2]

[ext_resource path="res://World/pictures/Solaria Demo Update 01.png" type="Texture" id=1]
[ext_resource path="res://Music and Sounds/sound effects/Open Chest.wav" type="AudioStream" id=2]
[ext_resource path="res://NPC/picture/interact-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://World/script/mission_chest.gd" type="Script" id=4]
[ext_resource path="res://intro/tres/path_arrow.tres" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "chest_opening"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("chest_open:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( -0.1 )
}

[sub_resource type="TileSet" id=2]
0/name = "path_arrow.tres 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 7, 6 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="CircleShape2D" id=3]
radius = 24.0208

[node name="mission_chest" type="Node2D"]
script = ExtResource( 4 )

[node name="chest_closed" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 96, 128, 16, 17 )

[node name="chest_open" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 96, 144, 16, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/chest_opening = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[node name="arrow_head" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 1, 1 )
format = 1
tile_data = PoolIntArray( -1507332, 0, 0 )

[node name="TextureButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( -27, -32 )
scale = Vector2( 0.165625, 0.0888889 )
normal = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -9 )
shape = SubResource( 3 )

[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_Area2D_body_shape_exited"]
